Re-enabled Splash screen (with new images). Updated formatting on assembly view.